--- a/style.css
+++ b/style.css
@@ -1,83 +1,53 @@
+*{
+    box-sizing: border-box;
+}
 body{
-
+    font-family: serif;
     margin: 0;
-    padding: 0;
-    font-weight: bolder;
 }
 
 
-
-    
-
-
-
-
-
-
-
-.buttons {
-    font-size: 15px;
-    color:rgb(0, 1, 8);
-    display: inline-block;
+main{
     display: flex;
-    position: relative;
-    text-decoration: none;
-    
 }
 
 
-.buttons:hover{
-    color: #ce23ce;
-    font-weight: bolder;
-}
 
 
-    
-
-.pade__sidebar__background{
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    background-color: #f4f5f6;
-    
-}
-.page__sidebar__wrap{
-    position: relative;
-    display: flex;
-    height: 100%;
-    -ms-flex-direction: column;
-    flex-direction: column;
-    padding: 72px 32px 64px 56px;
-    z-index: 1
-}
-.content{
-    padding-bottom: 16px;
-    -ms-flex: 1 0 auto;
-    flex: 1 0 auto;
-}
-.page__sidebar{
-    display: block;
-    width: 240px;
-    height: 100%;
-    min-width: 240px;
-    
-    border-right: 5px solid black;
-    position: relative;
-}
-nav{
-    flex-direction: column;
-    display: flex;
-    width: 90px;
-    
-}
-
-.page__wrapper{
-    height: 100vh;
-}
 .logo{
-    width: 70px;
-    height: 70px;
-    margin-bottom: 20px
+    height: 80px;
+    width: 80px;
+    margin-bottom: 10px;
 }
+.header__nav__list{
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+    
+}
+.header{
+    border-right: 2px solid black;
+    padding: 60px 60px 0px 60px;
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+    height: 100vh;
+    
+}
+.header__list-item:not(:last-child){
+    margin-bottom: 10px;
+}
+.header__list__item-link{
+    transition: color .2s ease-in-out, transform .2s ease-in-out;
+    display: block;
+    color: black;
+    text-decoration: none;
+    font-size: 20px;
+}
+.header__list__item-link:hover{
+    color: #a221f2;
+    transform: scale(1.1);
+    
+}
+
+
