--- a/style.css
+++ b/style.css
@@ -21,12 +21,16 @@ main{
 }
 .header{
     border-right: 2px solid black;
-    padding: 60px 60px 0px 60px;
+    padding: 50px 50px 0px 50px;
     display: flex;
     justify-content: space-between;
-    flex-direction: column;
-    height: 100vh;
+    flex-direction: column  ;
+    height: 100vh;  
+    position: fixed;
     
+}
+.header__top{
+    width: 81px;
 }
 .header__list-item:not(:last-child){
     margin-bottom: 10px;
@@ -43,34 +47,27 @@ main{
     transform: scale(1.1);
     
 }
-.buttons {
-    transition: color .2s ease-in-out, transform .2s ease-in-out;
-    display: block;
+.bottom__info-list{
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+    
+}
+.header__bottom{
+    margin-top: 100px;
+    padding-bottom: 150px;
+    width: 140px;
+}
+.bottom__info-list__items:not(:last-child){
+    margin-bottom: 5px;
+    
+}
+.bottom__info-contacts{
+    text-decoration: none;
     color: black;
-    text-decoration: none;
-    font-size:16px;
-    margin-bottom: 1px;
+    font-weight: bold; 
 }
-.firstinfo{
-    margin-top: 150px;
-    margin-bottom: 1px;
-    font-size: 16px;
-    color:rgb(0, 1, 8);
-    display: inline-block;
-    display: flex;
-    position: relative;
-    text-decoration: none;
-}
-.daysinfo{
-    margin-top: 1px;
-    font-size: 16px;
-    color:rgb(0, 1, 8);
-    display: inline-block;
-    display: flex;
-    position: relative;
-    text-decoration: none;
-}
-.buttons:hover{
+.bottom__info-contacts:hover{
     color: #a221f2;
-    transform: scale(1.1);
+        
 }
